--- a/A.html
+++ b/A.html
@@ -353,7 +353,7 @@
             <em lang="wln-BE"
               >On va bî râde planter dès palmiers yè dès bawobabs à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>abomination</strong>, <em lang="wln-BE">abominâcion</em>.
@@ -878,7 +878,7 @@
             <em lang="wln-BE">Marie Wets dè Brin</em>.<em lang="wln-BE"
               >ne-Chatau a acouchi lès feumes dè</em
             >
-            Y<em lang="wln-BE">ite dèspu 1933 'squ' à 1981</em>.
+            <em lang="wln-BE">Yite dèspu 1933 'squ' à 1981</em>.
           </p>
           <p>
             <strong>accouder</strong>, <strong>s'</strong>,
@@ -1751,7 +1751,7 @@
             <em lang="wln-BE"
               >On a dvû payi l' afiliâcion d' Achille au club dè fout'bal dè</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>affilier</strong>, <em lang="wln-BE">afilier</em>.
@@ -6155,7 +6155,7 @@
               >C'est dèspu 1959 que les autobus ont rimplacé 'l tram qui passoût
               à Vèznau,</em
             >
-            Y<em lang="wln-BE">ite, yè Waut-Ite</em>.
+            <em lang="wln-BE">Yite, yè Waut-Ite</em>.
           </p>
           <p>
             <strong>autocariste</strong>,
