--- a/B.html
+++ b/B.html
@@ -4714,7 +4714,7 @@
               >Dins 'l temps, alintoûr dèl foûrdje, il avoût deus bras'riyes
               à</em
             >
-            Y<em lang="wln-BE">ite </em>:
+            <em lang="wln-BE">Yite </em>:
             <em lang="wln-BE">Dehaspe, in face, yè Ballant à costé</em>.
             <em lang="wln-BE">A Vèznau, i d'avoût yone al Fourtchète</em>.
           </p>
@@ -5057,7 +5057,7 @@
             <em lang="wln-BE"
               >Inviè 1900, il avoût ène briktriye al rûwe dè l' Èscole à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>briquetier</strong><em lang="wln-BE">, brikteû,</em> n.m.
