--- a/C.html
+++ b/C.html
@@ -3959,7 +3959,7 @@
               >C'est 'm tayon Simèyon Gervy qu'a tchèrpèté 'l twèt d' l' èglîje
               dè</em
             >
-            Y<em lang="wln-BE">ite inviè 1898</em>.
+            <em lang="wln-BE">Yite inviè 1898</em>.
           </p>
           <p>
             <strong>charpentier</strong><em lang="wln-BE">, tchèrpèti,</em> n.m.
@@ -4063,7 +4063,7 @@
           <p>
             <strong>châsse</strong><em lang="wln-BE">, chasse</em>.
             <em lang="wln-BE">Lès deûs chasses dè sinte Lutgarde sonsst' à</em>
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE"
               >In 1940, lès Almans ont bombârdé 'l Coléjiale dè Nivèle qu'a pris
               feu ; du coûp, on n'a rtrouvé qu' dès bokès dèl chasse dè sinte
@@ -8468,7 +8468,7 @@
             <em lang="wln-BE">consèlié, ère,</em> n.m.f. Y<em lang="wln-BE"
               >seult astoût consèlière comunâle à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>conseilleur</strong><em lang="wln-BE">,</em>
