--- a/D.html
+++ b/D.html
@@ -347,7 +347,7 @@
             <strong>de</strong><em lang="wln-BE">, dè, dèl, dès, du</em>.
             <em lang="wln-BE">Cint grames dè pwèfe</em>.
             <em lang="wln-BE">Mindji d' l' avin</em>.<em lang="wln-BE">ne</em>.
-            <em lang="wln-BE">Èl vilâdje dè</em> Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Èl vilâdje dè</em> <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE">L'uch dè pa-d'vant</em>.
             <em lang="wln-BE">Travayi dèl nûte</em>.
             <em lang="wln-BE">Travayi du djoû</em>.
@@ -1252,7 +1252,7 @@
             <em lang="wln-BE"
               >Colècsioner dès dèscoûpur' dè gazète qui pârle dè</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>décourageant</strong>, <strong>e</strong
@@ -1406,7 +1406,7 @@
             <em lang="wln-BE"
               >Lès Bruslères ont 'l réputâcion dè raguider lès djins d'</em
             >
-            Y<em lang="wln-BE">ite avu branmin d' dédin</em>.
+            <em lang="wln-BE">Yite avu branmin d' dédin</em>.
           </p>
           <p>
             <strong>dedans</strong
