--- a/E.html
+++ b/E.html
@@ -388,7 +388,7 @@
             <strong>échappé</strong>, <strong>e</strong
             ><em lang="wln-BE">, (è)scapé, yè,</em> adj. et n.m.f.
             <em lang="wln-BE">Èl Police esst'au cu d'in scapé dèl prîjon d'</em>
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p><em lang="wln-BE">On l'a scapé bèle !</em></p>
           <p>
@@ -731,7 +731,7 @@
           </p>
           <p>
             <strong>écluse</strong>, <em lang="wln-BE">èclûse,</em> n.f.
-            <em lang="wln-BE">L' èclûse 5F dè</em>Y<em lang="wln-BE">ite</em>
+            <em lang="wln-BE">L' èclûse 5F dè</em><em lang="wln-BE">Yite</em>
           </p>
           <p>
             <strong>éclusier</strong>, <em lang="wln-BE">èclusier,</em> n.m.
@@ -1179,7 +1179,7 @@
           <p><strong>édition</strong>, <em lang="wln-BE">èdicion,</em> n.f.</p>
           <p>
             <strong>Edmond</strong>, <em lang="wln-BE">Mon</em>.
-            <em lang="wln-BE">À</em> Y<em lang="wln-BE">ite,</em>
+            <em lang="wln-BE">À</em> <em lang="wln-BE">Yite,</em>
             <em lang="wln-BE">Mon Tateûr</em> (spo de Edmond Denuit)
             <em lang="wln-BE">racontoût toudi dès fauves</em>.
           </p>
@@ -4186,7 +4186,7 @@
           <p>
             <strong>entité</strong>, <em lang="wln-BE">intité,</em> n.f.
             <em lang="wln-BE">Aut'-Ite yè Vèznau sont dins l'in-tité d'</em>
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>entôlage</strong>, <em lang="wln-BE">intolâdje,</em> n.m.
@@ -5785,7 +5785,7 @@
               >C'est dèspu 'l 10/07/2013 què Jean-Pol Branche tît l'èstaminèt
               dèl Courone, sul place dè</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>estampage</strong>, imprimer en relief, soutirer de
