--- a/F.html
+++ b/F.html
@@ -88,7 +88,7 @@
             <em lang="wln-BE"
               >Sylvianne Lambert est fabricyiène al fabrike d'èglîje dè</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>fabrique</strong><em lang="wln-BE">, fabrike,</em> n.f.
