--- a/H.html
+++ b/H.html
@@ -707,7 +707,7 @@
               >Du temps qu'on a constrwit 'l nouvia canâl, sacans ouvris lodjine
               al Courone à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>hébété</strong>, <strong>e</strong>,
@@ -1422,7 +1422,7 @@
               >Quand on sra vîs, putète què nos dirons à l'ospice</em
             >.
             <em lang="wln-BE">Mimiye dèl Courone astoût chèf à l'ospice dè</em>
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>hospitalier</strong>, <strong>ère</strong>,
