--- a/J.html
+++ b/J.html
@@ -443,7 +443,7 @@
             <em lang="wln-BE"
               >On va ascouter du djas' à l'anciène sale du Progrès à</em
             >
-            Y<em lang="wln-BE">ite qui s'apèle asteûr l'</em>
+            <em lang="wln-BE">Yite qui s'apèle asteûr l'</em>
             Heptone.
           </p>
           <p>
