--- a/L.html
+++ b/L.html
@@ -1351,7 +1351,7 @@
               lang="wln-BE"
               > Grand Lèyon », èl prèmi à gauche in montant èl rûwe Waute à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE">Tous sès èfants astine spotés</em> «<em
               lang="wln-BE"
               > du Grand Lèyon » </em
@@ -1713,7 +1713,7 @@
               lang="wln-BE"
               > Librairy Ternel » à</em
             >
-            Y<em lang="wln-BE">ite, yè Nicolas Tamigniau au</em> «<em
+            <em lang="wln-BE">Yite, yè Nicolas Tamigniau au</em> «<em
               lang="wln-BE"
               > Manuscrit » à Brin</em
             >.<em lang="wln-BE">ne-Chatau</em>.
