--- a/M.html
+++ b/M.html
@@ -526,7 +526,7 @@
             <em lang="wln-BE"
               >Gaston Chèron astoût mésse à l'èscole catolike dès garçons à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE"
               >Louis Landercy, yè Maurice Mosselman astine mésses à l' èscole
               comunale dès garçons</em
@@ -1668,7 +1668,7 @@
             >
             forgeron, maréchal-ferrant, <em lang="wln-BE">marchau,</em> n.m.
             <em lang="wln-BE">Paul du Marchau astoût 'l dérni marchau d'</em>
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE"
               >Jean du Marchau, c'est Jean Gascard qu'ès père astoût marchau à
               Ophain. Èl Martchau, c'est David Godeau d' Aut'-Ite.</em
@@ -3246,7 +3246,7 @@
             <em lang="wln-BE"
               >Èm' grand-pére Fèrnand avoût 's mènuz'rîye al rue Waute à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>menuisier</strong><em lang="wln-BE">, mènuzié</em>, n.m.
@@ -4909,8 +4909,9 @@
           <p>
             <strong>montée</strong>, <em lang="wln-BE">tiène,</em> n.m.f.
             <em lang="wln-BE">Èl tiène dèl Fourtchète à Vèznau</em>.
-            <em lang="wln-BE">Èl tiène Bièrny à</em> Y<em lang="wln-BE">ite</em
-            >. <em lang="wln-BE">Èl tiène d' Aut'Ite</em>. Aussi pour une volée
+            <em lang="wln-BE">Èl tiène Bièrny à</em>
+            <em lang="wln-BE">Yite</em>.
+            <em lang="wln-BE">Èl tiène d' Aut'Ite</em>. Aussi pour une volée
             d'escalier : <em lang="wln-BE">in n-èscayé à deûs montéyes</em>.
           </p>
           <p>
