--- a/N.html
+++ b/N.html
@@ -1245,7 +1245,7 @@
               qu'vos ârez èl mau du payi, vos n'avez qu'à d'in dèsgonfler yun
               pou sinte l'ér dè</em
             >
-            Y<em lang="wln-BE">ite !</em>
+            <em lang="wln-BE">Yite !</em>
           </p>
           <p>
             <strong>notable</strong><em lang="wln-BE">, notâbe,</em> adj. et n.
@@ -1564,7 +1564,7 @@
             <strong>noyé</strong
             ><em lang="wln-BE">, noyi, noyéye, nouyi, nouyéye</em>, adj. et n.
             <em lang="wln-BE">Philippe a rpèchi in nouyi lé l'èclûje dè</em>
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE">Nos stons nouyis d'ouvrâdje</em>.
           </p>
           <p>
