--- a/O.html
+++ b/O.html
@@ -305,7 +305,7 @@
             <em lang="wln-BE"
               >Dins 'l temps pou passer avu in tchâr pau pavé d'Askimpont à</em
             >
-            Y<em lang="wln-BE">ite, i faloût payi l'octrwè</em>.
+            <em lang="wln-BE">Yite, i faloût payi l'octrwè</em>.
           </p>
           <p>
             <strong>octroyer</strong><em lang="wln-BE">, octrwèyer</em>.
@@ -1169,7 +1169,7 @@
           <p>
             <strong>organiste</strong><em lang="wln-BE">, organisse,</em> n.m.f.
             <em lang="wln-BE">Victor Haine astoût cache-tchi</em> (bedeau)
-            <em lang="wln-BE">yè organisse à</em> Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">yè organisse à</em> <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>orge</strong><em lang="wln-BE">, orje,</em> n.m. Orge d'
