--- a/P.html
+++ b/P.html
@@ -568,7 +568,7 @@
             <em lang="wln-BE"
               >Du d'zeûr du tiène dè Vèznau, èl panorama inviè</em
             >
-            Y<em lang="wln-BE">ite est foûrt bia</em>.
+            <em lang="wln-BE">Yite est foûrt bia</em>.
           </p>
           <p>
             <strong>pansage</strong><em lang="wln-BE">, pansâdje,</em> n.m.
@@ -685,7 +685,7 @@
               >José Peeterbroeck, Joseph Clavie, Lucien Decamps, Nestor Bontet,
               Jacques Vanderlinden yè co branmin d' z-autes dè</em
             >
-            Y<em lang="wln-BE">ite yè Vèznau boutine al papètrîye</em>.
+            <em lang="wln-BE">Yite yè Vèznau boutine al papètrîye</em>.
           </p>
           <p>
             <strong>papetier</strong>, ouvrier<em lang="wln-BE">, papètié, n</em
@@ -890,7 +890,7 @@
               >Dèspu qu'on a stitchi in nouvia paratonére sul cloki d' l'èglîje
               dè</em
             >
-            Y<em lang="wln-BE">ite, èl coq èn' toûrne pus</em>.
+            <em lang="wln-BE">Yite, èl coq èn' toûrne pus</em>.
             <em lang="wln-BE">Bièsse, hin !</em>
           </p>
           <p>
@@ -2177,7 +2177,7 @@
               >Dins 'l temps, Mad'mwèzèle de Géradon yè 'l famîye de
               Lichtervelde patronine lès èscoles catolikes dè</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>patronnesse</strong>,
@@ -2302,7 +2302,7 @@
             <em lang="wln-BE"
               >C'èsst'in 1859 qu'on a fét 'l pavâdje dèl Place dè</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>pavaner</strong>, <strong>se</strong
@@ -3243,7 +3243,7 @@
             <em lang="wln-BE"
               >Félix Devogeleer astoût précèpteûr dès Posses à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>percer</strong><em lang="wln-BE">, pèrcer</em>.
@@ -3566,7 +3566,7 @@
             <em lang="wln-BE"
               >Dj'ai d'djà acaté ène concèssion à pèrpétwité à</em
             >
-            Y<em lang="wln-BE">ite </em>: <em lang="wln-BE">400</em>.<em
+            <em lang="wln-BE">Yite </em>: <em lang="wln-BE">400</em>.<em
               lang="wln-BE"
               >00 eûros</em
             >.
@@ -4615,7 +4615,7 @@
               >ne-Chatau</em
             >.
             <em lang="wln-BE">Pière Lisart astoût mèd'cin dès bièsses à</em>
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE">Sint Pière a branmin d'ouvrâdje </em>:
             <em lang="wln-BE"
               >il est patron dès carleûs, dès cayoteûs, yè dès pècheûs</em
@@ -6248,7 +6248,7 @@
             <em lang="wln-BE">Èl Wauxhall dè</em> Y<em lang="wln-BE"
               >ite a sti constrwit inviè 1890 pa Mossieu Desmet du chatau d'</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE"
               >Lès dérnis qui fèzine cabarèt dwé-là, ç-astoût èl famîye Devroede
               avu leûs èfants Wilfriede, Freddy, Micheline dite Mimîye, yè
@@ -6843,7 +6843,7 @@
               >Dins 'l temps, èl famîye Botman avoût ène pèchon'rîye al ruwe
               Waute à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>poissonnier</strong><em lang="wln-BE">, pèchoni,</em> n.m.
@@ -8077,7 +8077,7 @@
             <em lang="wln-BE"
               >Dins 'l temps, il avoût in pouy'ti au batimint Dènis à</em
             >
-            Y<em lang="wln-BE">ite,</em>
+            <em lang="wln-BE">Yite,</em>
             actuel Délitraiteur.
           </p>
           <p>
@@ -10116,7 +10116,7 @@
               >Signi ène protèstâcion conte l' instalâcion d'ène centrale
               atomike à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>protester</strong>, <em lang="wln-BE">protester</em>.
