--- a/R.html
+++ b/R.html
@@ -6082,7 +6082,7 @@
               >Mès parints, mès tayons yè mès ratayons èrpoûze au cimintière
               dè</em
             >
-            Y<em lang="wln-BE">ite</em>.<em lang="wln-BE"
+            <em lang="wln-BE">Yite</em>.<em lang="wln-BE"
               >In ivièr, on lèye èrpwèzer 'l têre</em
             >. <em lang="wln-BE">S'èrpwèzer d' fatig'</em>.
             <em lang="wln-BE">S'èrpwèzer su sès lauriés</em>. Plais.,
@@ -6134,7 +6134,7 @@
               >doner, c'est doner, èrprinde, c'est voler ! Achille n'astoût ni
               rpris sul lisse dè l'èkipe dè</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE"
               >Dji n' sés ni si tous lès mots d' walon, sont rpris dins 'm
               dicsionére</em
@@ -9094,7 +9094,7 @@
           <p>
             <strong>ruelle</strong><em lang="wln-BE">, ruwèle</em>, n.f.
             <em lang="wln-BE">Èl ruwèle Capon c'est dins 'l ruwe Waute à</em>
-            Y<em lang="wln-BE">ite, pou daler au Mamboûr</em>.
+            <em lang="wln-BE">Yite, pou daler au Mamboûr</em>.
             <em lang="wln-BE">Maleûreûz'mint, sul plake on a marki</em> «<em
               lang="wln-BE"
               > Mamboûr » putoût què</em
