--- a/S.html
+++ b/S.html
@@ -1874,7 +1874,7 @@
             <em lang="wln-BE"
               >Raymond André a sti lonmin sècrètére comunâl à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE">Èm' père mètoût sès papis dins n-in sècrètére</em
             >.
           </p>
@@ -4757,7 +4757,7 @@
               >I parèt qu' dins 'l temps, il avoût in soutèrin qui daloût du
               chatau d'</em
             >
-            Y<em lang="wln-BE">ite au chatau d' Fauquez</em>.
+            <em lang="wln-BE">Yite au chatau d' Fauquez</em>.
             <em lang="wln-BE">Si on l'èrtroufe, on li don'ra in no </em>:
             <em lang="wln-BE">èl soutèrin du Loke Nèsse</em>.
           </p>
@@ -5117,7 +5117,7 @@
             <em lang="wln-BE"
               >Pou 'l moumint, èl stacion'mint au mitan d' Vèznau ou bî d'</em
             >
-            Y<em lang="wln-BE">ite est tîkfwè maléjièle</em>.
+            <em lang="wln-BE">Yite est tîkfwè maléjièle</em>.
           </p>
           <p>
             <strong>stationner</strong>, <em lang="wln-BE">stacioner</em>.
@@ -5399,7 +5399,7 @@
             <em lang="wln-BE"
               >Sins subsid', ni moyi d'avwêr in club dè fout'bal à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>subsidier</strong>, <em lang="wln-BE">subsidyi</em>.
