--- a/T.html
+++ b/T.html
@@ -2709,7 +2709,7 @@
           <p>
             <strong>tonner</strong>, <em lang="wln-BE">touner</em>.
             <em lang="wln-BE">Quand i toûne su Vèznau, l'oradje va ariver à</em>
-            Y<em lang="wln-BE">ite</em>. Plais.,
+            <em lang="wln-BE">Yite</em>. Plais.,
             <em lang="wln-BE">èl pètit Jézu djeûwe à guîyes</em>.
           </p>
           <p>
@@ -3865,7 +3865,7 @@
             Tranquillisez-vous, ne vous torturez pas les méninges :
             <em lang="wln-BE">tènez vos pîds tchauds</em>.
             <em lang="wln-BE">I fét trankîye quand lès motos n' passe pus à</em>
-            Y<em lang="wln-BE">ite, râm'mint l'iviêr</em>. Rv. Restez
+            <em lang="wln-BE">Yite, râm'mint l'iviêr</em>. Rv. Restez
             tranquille<em lang="wln-BE"> </em>:
             <em lang="wln-BE"
               >dmeurez au cwin d' vo stûve sans rsaki vos chabots</em
