--- a/V.html
+++ b/V.html
@@ -766,7 +766,7 @@
             <em lang="wln-BE"
               >Du coû, d'aucuns du vilâdje dîje què l'èglîje dè</em
             >
-            Y<em lang="wln-BE">ite n'est pus leû n-èglîje</em>.
+            <em lang="wln-BE">Yite n'est pus leû n-èglîje</em>.
             <em lang="wln-BE"
               >On dira dirèk au cimintière, d'aboûrd ? Mi, waye, dirèk</em
             >.
@@ -2103,7 +2103,7 @@
             ><em lang="wln-BE">, visiteû, se,</em> n.m.f.
             <em lang="wln-BE"
               >Èm' feume Danièlle astoût visiteûse al prîjon d'</em
-            >Y<em lang="wln-BE">ite</em>.
+            ><em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>visqueux</strong>, <strong>euse</strong>,
