--- a/grammaire.html
+++ b/grammaire.html
@@ -1028,7 +1028,7 @@
                 ou <em lang="wln-BE">Woûti-Brin</em>.<em lang="wln-BE">ne,</em>
                 Haut-Ittre
                 <em lang="wln-BE">&gt; Waut'-Ite ou Aut'-Ite,</em> Ittre
-                <em lang="wln-BE">&gt;</em> Y<em lang="wln-BE">ite</em> ou
+                <em lang="wln-BE">&gt;</em> <em lang="wln-BE">Yite</em> ou
                 <em lang="wln-BE">Ite</em>.
               </p>
             </li>
@@ -3513,7 +3513,7 @@
           <p>
             <strong>à</strong> : <em lang="wln-BE">à</em>.
             <em lang="wln-BE">Daler à pîd</em>.
-            <em lang="wln-BE">Dji dmeure à</em> Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Dji dmeure à</em> <em lang="wln-BE">Yite</em>.
             <em lang="wln-BE">Lèyi l'uch à craye</em>.
           </p>
           <blockquote>
