--- a/I.html
+++ b/I.html
@@ -231,7 +231,7 @@
             <em lang="wln-BE"
               >C'esst'in décimbe qu'on vwèt lès iluminacions à</em
             >
-            Y<em lang="wln-BE">ite</em>.
+            <em lang="wln-BE">Yite</em>.
           </p>
           <p>
             <strong>illuminer</strong>, <em lang="wln-BE">iluminer</em>.
@@ -2210,7 +2210,7 @@
               >C'èsst' inimajinâbe lès dègats qu'èl Ry a fét quand il a
               dèsboûrdé à</em
             >
-            Y<em lang="wln-BE">ite in 2014</em>.
+            <em lang="wln-BE">Yite in 2014</em>.
           </p>
           <p>
             <strong>inimitable</strong>, <em lang="wln-BE">inimitâbe,</em> adj.
@@ -3795,7 +3795,7 @@
             <em lang="wln-BE">Vos avez swè ? Mi ètou !</em>
           </p>
           <p>
-            <strong>Ittre</strong>, Y<em lang="wln-BE">ite, Ite</em>.
+            <strong>Ittre</strong>, <em lang="wln-BE">Yite, Ite</em>.
             <em lang="wln-BE">Dè pus in pus d' djins vène dèmeurer à</em> Y<em
               lang="wln-BE"
               >ite</em
