--- a/préface.html
+++ b/préface.html
@@ -26,69 +26,72 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h1>Préface</h1>
-        <p>Haut-Ittre le 10 février 2021,</p>
-        <p>
-          C'est comme du temps de nos grands-parents : il a neigé et il gèle à
-          -10 degrés !
-        </p>
-        <p>
-          Le temps de nos « vieux » des siècles passés où le français se parlait
-          en wallon. Où des mots sont restés sous les couvertures des ans sans
-          qu'on puisse les traduire.
-        </p>
-        <p>
-          Il y a dans le wallon du bas latin de curé de campagne, du flamand
-          ménapien, du picard, du germanique, des morceaux de burgonde, des
-          traces de celte, bref, des odeurs de terroirs courant d'une vallée à
-          l'autre.
-        </p>
-        <p>
-          Jean-Marie Gervy est l'auteur persévérant de deux ouvrages dont la
-          somme de travail est immense et dont la finalité restera toujours
-          inachevée tant l'archéologie des mots nous cachera toujours quelques
-          subtilités vagabondes. Il a créé la trace qui manquait au wallon de
-          nos trois villages : Haut-Ittre, Ittre, Virginal, et cela avant que
-          quelques érudits flamboyants rangent définitivement dans l'écriture
-          inclusive la vérité paysanne de notre passé sans laquelle nous
-          n'existerions pas.
-        </p>
-        <p>
-          N'oubliez jamais, vous qui lirez ces pages, que le passé est un socle
-          immuable. Ne laissez pas le temps manger les souvenirs anciens.
-        </p>
-        <p>
-          Les sentences wallonnes, dans leur grande richesse et sagesse, c'est
-          selon, sont semblables à celle-ci traduite en français : « je suis
-          responsable de ce que je dis, pas de ce que vous comprenez ! ».
-        </p>
-        <p>
-          <em lang="wln-BE"
-            >Djè sûs rèsponsâbe dè çoû què d' dis, ni dè çoû qu' vos
-            compèrdez !</em
-          >
-        </p>
-        <p>
-          Bravo, et encore bravo, l'ami Jean-Marie pour ce travail de
-          bénédictin. Car lorsqu'on n'a plus en soi une somme suffisante de
-          délire, la vie devient une agonie qui n'en finit pas.
-        </p>
-        <p>
-          Mettre en œuvre une telle remontée du passé, c'est créer des souvenirs
-          de vie. Rien n'est plus puissant que cela.
-        </p>
-        <p>Chapeau l'ami !</p>
-        <p>
-          Jean-Marie Lambert<a
-            href="#fn1"
-            class="footnote-ref"
-            id="fnref1"
-            role="doc-noteref"
-            ><sup>1</sup></a
-          >
-        </p>
-      </div>
+      <section>
+        <div class="container">
+          <h1>Préface</h1>
+          <p>Haut-Ittre le 10 février 2021,</p>
+          <p>
+            C'est comme du temps de nos grands-parents : il a neigé et il gèle à
+            -10 degrés !
+          </p>
+          <p>
+            Le temps de nos « vieux » des siècles passés où le français se
+            parlait en wallon. Où des mots sont restés sous les couvertures des
+            ans sans qu'on puisse les traduire.
+          </p>
+          <p>
+            Il y a dans le wallon du bas latin de curé de campagne, du flamand
+            ménapien, du picard, du germanique, des morceaux de burgonde, des
+            traces de celte, bref, des odeurs de terroirs courant d'une vallée à
+            l'autre.
+          </p>
+          <p>
+            Jean-Marie Gervy est l'auteur persévérant de deux ouvrages dont la
+            somme de travail est immense et dont la finalité restera toujours
+            inachevée tant l'archéologie des mots nous cachera toujours quelques
+            subtilités vagabondes. Il a créé la trace qui manquait au wallon de
+            nos trois villages : Haut-Ittre, Ittre, Virginal, et cela avant que
+            quelques érudits flamboyants rangent définitivement dans l'écriture
+            inclusive la vérité paysanne de notre passé sans laquelle nous
+            n'existerions pas.
+          </p>
+          <p>
+            N'oubliez jamais, vous qui lirez ces pages, que le passé est un
+            socle immuable. Ne laissez pas le temps manger les souvenirs
+            anciens.
+          </p>
+          <p>
+            Les sentences wallonnes, dans leur grande richesse et sagesse, c'est
+            selon, sont semblables à celle-ci traduite en français : « je suis
+            responsable de ce que je dis, pas de ce que vous comprenez ! ».
+          </p>
+          <p>
+            <em lang="wln-BE"
+              >Djè sûs rèsponsâbe dè çoû què d' dis, ni dè çoû qu' vos
+              compèrdez !</em
+            >
+          </p>
+          <p>
+            Bravo, et encore bravo, l'ami Jean-Marie pour ce travail de
+            bénédictin. Car lorsqu'on n'a plus en soi une somme suffisante de
+            délire, la vie devient une agonie qui n'en finit pas.
+          </p>
+          <p>
+            Mettre en œuvre une telle remontée du passé, c'est créer des
+            souvenirs de vie. Rien n'est plus puissant que cela.
+          </p>
+          <p>Chapeau l'ami !</p>
+          <p>
+            Jean-Marie Lambert<a
+              href="#fn1"
+              class="footnote-ref"
+              id="fnref1"
+              role="doc-noteref"
+              ><sup>1</sup></a
+            >
+          </p>
+        </div>
+      </section>
     </main>
     <section
       id="footnotes"
