--- a/index.html
+++ b/index.html
@@ -23,148 +23,162 @@
       </div>
     </header>
     <main>
-      <div class="container">
-        <h1 style="margin-top: 1rem; margin-bottom: 1rem">Présentation</h1>
+      <section style="padding-top: 3rem">
+        <div class="container">
+          <h1>Présentation</h1>
 
-        <p>
-          Selon l’Unesco, une langue devient véritablement « en danger » quand
-          elle n’est plus enseignée par les parents, à la maison, comme langue «
-          maternelle ». Une langue est dite « moribonde » quand elle n’est plus
-          parlée que par une poignée de locuteurs très âgés, ce qui est le cas
-          de notre wallon. Sauvons-le ! <em lang="wln-BE">Sauvone-lè !</em>
-        </p>
-        <p>
-          Moribond !? <em lang="wln-BE">Mins coumint ç-qu’on dit</em> « il est
-          moribond » <em lang="wln-BE">in walon</em> ?
-          <em lang="wln-BE"
-            >Hè bî, on dit : il est prèsse à mori, il a d’djà d’èl têre dins sès
-            poches, ès’ cu sint l’èscoupe</em
-          >
-          (la bêche du fossoyeur),
-          <em lang="wln-BE"
-            >il èsst’ al dèrnière…, yè co d’ z-autes èsprèssions qu’ vos
-            trouvrez dins 's dicsionère-ci.</em
-          >
-        </p>
-        <p>
-          Voilà 20 ans que Jean-Marie Gervy et les
-          <a href="./remerciements.html">Vîs Paltots</a>, derniers locuteurs
-          wallons de l’entité ittroise, travaillent à sauvegarder le parler
-          wallo-picard local. Cet ouvrage fait suite au
-          <a href="https://gervye.github.io/dico_wallon_francais_ittre/"
-            >dictionnaire Wallon - Français</a
-          >
-          déjà paru et vous aidera à retrouver un mot wallon oublié, voire
-          ignoré. Nos passionnés vont vous faire partager leur enthousiasme,
-          <em lang="wln-BE">pèrcés sots du walon qu’is sont !</em>
-        </p>
-        <p>
-          <em lang="wln-BE"
-            >Atakone ? Alez, hue !, d'aboûrd !, vos ârez branmin d’ pléji à
-            rtrouver sacans rvazis<a
-              href="#fn0"
-              class="footnote-ref"
-              id="fnref0"
-              role="doc-noteref"
-              ><sup>1</sup></a
+          <p>
+            Selon l’Unesco, une langue devient véritablement « en danger » quand
+            elle n’est plus enseignée par les parents, à la maison, comme langue
+            « maternelle ». Une langue est dite « moribonde » quand elle n’est
+            plus parlée que par une poignée de locuteurs très âgés, ce qui est
+            le cas de notre wallon. Sauvons-le !
+            <em lang="wln-BE">Sauvone-lè !</em>
+          </p>
+          <p>
+            Moribond !? <em lang="wln-BE">Mins coumint ç-qu’on dit</em> « il est
+            moribond » <em lang="wln-BE">in walon</em> ?
+            <em lang="wln-BE"
+              >Hè bî, on dit : il est prèsse à mori, il a d’djà d’èl têre dins
+              sès poches, ès’ cu sint l’èscoupe</em
             >
-            qu’ont branmin pus d’ goût in walon qu’in francès.</em
-          >
-        </p>
-
-        <h1 style="margin-top: 2rem; margin-bottom: 1rem">Sommaire</h1>
-        <nav class="home-nav">
-          <div>
-            <a href="./préface.html">Préface</a>
-          </div>
-          <div>
-            <a href="./comment-lire-le-wallon.html"
-              >Mais comment lire le wallon ?</a
+            (la bêche du fossoyeur),
+            <em lang="wln-BE"
+              >il èsst’ al dèrnière…, yè co d’ z-autes èsprèssions qu’ vos
+              trouvrez dins 's dicsionère-ci.</em
             >
-          </div>
-          <div>
-            <a href="./abréviations.html">Abréviations</a>
-          </div>
-          <div>
-            <a href="./A.html">Dictionnaire</a>
-          </div>
-          <div>
-            <a href="./grammaire.html">Grammaire wallonne pour Ittre</a>
-          </div>
-          <div>
-            <a href="./conjugaisons.html">Conjugaison</a>
-          </div>
-          <div>
-            <a href="./liste-des-bourgmestres.html"
-              >Liste des bourgmestres de nos 3 villages connus depuis la fin du
-              19<sup>ème</sup> siècle</a
+          </p>
+          <p>
+            Voilà 20 ans que Jean-Marie Gervy et les
+            <a href="./remerciements.html">Vîs Paltots</a>, derniers locuteurs
+            wallons de l’entité ittroise, travaillent à sauvegarder le parler
+            wallo-picard local. Cet ouvrage fait suite au
+            <a href="https://gervye.github.io/dico_wallon_francais_ittre/"
+              >dictionnaire Wallon - Français</a
             >
-          </div>
-          <div>
-            <a href="./liste-des-gardes-champetres.html"
-              >Liste des derniers gardes-champêtres de nos 3 villages</a
+            déjà paru et vous aidera à retrouver un mot wallon oublié, voire
+            ignoré. Nos passionnés vont vous faire partager leur enthousiasme,
+            <em lang="wln-BE">pèrcés sots du walon qu’is sont !</em>
+          </p>
+          <p>
+            <em lang="wln-BE"
+              >Atakone ? Alez, hue !, d'aboûrd !, vos ârez branmin d’ pléji à
+              rtrouver sacans rvazis<a
+                href="#fn0"
+                class="footnote-ref"
+                id="fnref0"
+                role="doc-noteref"
+                ><sup>1</sup></a
+              >
+              qu’ont branmin pus d’ goût in walon qu’in francès.</em
             >
-          </div>
-          <div>
-            <a href="./liste-des-lieux-dits.html"
-              >Liste et localisation des lieux-dits pour Ittre, Haut-Ittre et
-              Virginal repris sur la carte Popp de ± 1865</a
-            >
-          </div>
-          <div>
-            <a href="./textes-auteurs-ittrois.html"
-              >Textes en wallon rédigés par nos auteurs locaux</a
-            >
-          </div>
-          <div>
-            <a href="./dictionnaire-ancienne-langue-française.html"
-              >Dictionnaire de l'ancienne langue française</a
-            >
-          </div>
-          <div>
-            <a href="./remerciements.html">Remerciements</a>
-          </div>
-          <div>
-            <a href="./bibliographie.html">Bibliographie</a>
-          </div>
-        </nav>
-
-        <p>
-          À Jules César qui nous a apporté la langue latine, à François 1<sup
-            >er</sup
-          >
-          qui nous a imposé le « françois », à tous mes
-          <em lang="wln-BE">coumarâdes qui bèrdèle-nè co in walon,</em> à tous
-          <em lang="wln-BE">lès cîs qui l' ont co dins leû kieûr.</em>
-        </p>
-        <p>
-          <figure style="display: inline-block; margin: 1rem 1rem 0 0">
-            <img src="couverture.png" alt="Couverture du dictionnaire" />
-            <figcaption
-              style="font-style: italic; opacity: 0.7; text-align: center"
-            >
-              Dictionnaire - 2021
-            </figcaption>
-          </figure>
-          <figure style="display: inline-block; margin: 1rem 0 0 0">
-            <img
-              src="jean-marie-gervy-2019.png"
-              alt="Jean-Marie Gervy, auteur du dictionnaire"
-            />
-            <figcaption
-              style="font-style: italic; opacity: 0.7; text-align: center"
-            >
-              Jean-Marie Gervy - 2019
-            </figcaption>
-          </figure>
-        </p>
-        <div class="copyright">
-          Copyright Jean-Marie Gervy, Belgique, 2021.<br />
-          Tous droits de traduction, d'adaptation et de reproduction
-          interdits.<br />
-          Livre converti en site web par Emmanuel Gervy en 2025.
+          </p>
         </div>
-      </div>
+      </section>
+      <section>
+        <div class="container">
+          <h1>Sommaire</h1>
+          <nav class="home-nav">
+            <div>
+              <a href="./préface.html">Préface</a>
+            </div>
+            <div>
+              <a href="./comment-lire-le-wallon.html"
+                >Mais comment lire le wallon ?</a
+              >
+            </div>
+            <div>
+              <a href="./abréviations.html">Abréviations</a>
+            </div>
+            <div>
+              <a href="./A.html">Dictionnaire</a>
+            </div>
+            <div>
+              <a href="./grammaire.html">Grammaire wallonne pour Ittre</a>
+            </div>
+            <div>
+              <a href="./conjugaisons.html">Conjugaison</a>
+            </div>
+            <div>
+              <a href="./liste-des-bourgmestres.html"
+                >Liste des bourgmestres de nos 3 villages connus depuis la fin
+                du 19<sup>ème</sup> siècle</a
+              >
+            </div>
+            <div>
+              <a href="./liste-des-gardes-champetres.html"
+                >Liste des derniers gardes-champêtres de nos 3 villages</a
+              >
+            </div>
+            <div>
+              <a href="./liste-des-lieux-dits.html"
+                >Liste et localisation des lieux-dits pour Ittre, Haut-Ittre et
+                Virginal repris sur la carte Popp de ± 1865</a
+              >
+            </div>
+            <div>
+              <a href="./textes-auteurs-ittrois.html"
+                >Textes en wallon rédigés par nos auteurs locaux</a
+              >
+            </div>
+            <div>
+              <a href="./dictionnaire-ancienne-langue-française.html"
+                >Dictionnaire de l'ancienne langue française</a
+              >
+            </div>
+            <div>
+              <a href="./remerciements.html">Remerciements</a>
+            </div>
+            <div>
+              <a href="./bibliographie.html">Bibliographie</a>
+            </div>
+          </nav>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h1>Source</h1>
+          <p>
+            Ce site web reprend le contenu du livre suivant, à la demande de
+            l'auteur :
+          </p>
+          <p>
+            <figure style="display: inline-block; margin: 1rem 1rem 0 0">
+              <img src="couverture.png" alt="Couverture du dictionnaire" />
+              <figcaption
+                style="font-style: italic; opacity: 0.7; text-align: center"
+              >
+                Dictionnaire - 2021
+              </figcaption>
+            </figure>
+            <figure style="display: inline-block; margin: 1rem 0 0 0">
+              <img
+                src="jean-marie-gervy-2019.png"
+                alt="Jean-Marie Gervy, auteur du dictionnaire"
+              />
+              <figcaption
+                style="font-style: italic; opacity: 0.7; text-align: center"
+              >
+                Jean-Marie Gervy - 2019
+              </figcaption>
+            </figure>
+          </p>
+          <div class="copyright">
+            Copyright Jean-Marie Gervy, Belgique, 2021.<br />
+            Tous droits de traduction, d'adaptation et de reproduction
+            interdits.<br />
+            Livre converti en site web par Emmanuel Gervy en 2025.
+          </div>
+          <p style="margin-top: 2rem">
+            À Jules César qui nous a apporté la langue latine, à François 1<sup
+              >er</sup
+            >
+            qui nous a imposé le « françois », à tous mes
+            <em lang="wln-BE">coumarâdes qui bèrdèle-nè co in walon,</em> à tous
+            <em lang="wln-BE">lès cîs qui l' ont co dins leû kieûr.</em>
+          </p>
+        </div>
+      </section>
     </main>
     <section
       id="footnotes"
